--- a/output.html
+++ b/output.html
@@ -4059,5 +4059,611 @@
   <dd>to move on</dd>
  </dl>
 </section>
+<section class='samples'>
+  <p>
+    Deshalb ist es so wichtig, dass wir bei der energetischen Gebäudesanierung deutlich schneller vorankommen.
+  </p>
+  <p>
+    "That's why it's so important that we make much faster progress in the energy-efficient renovation of buildings."
+  </p>
+  <p>
+    Neben der Diskussion rechtlicher Herausforderungen müsse der Ausbau der IT-Infrastruktur vorankommen, mahnte die Kanzlerin.
+  </p>
+  <p>
+    "In addition to discussing legal challenges, progress must be made in expanding the IT infrastructure," the Chancellor warned.
+  </p>
+  <p>
+    Denn einerseits sollte der Abbau rasch vorankommen, andererseits darf die ÖVAG mit den Verkäufen keine allzu großen Verluste einfahren.
+  </p>
+  <p>
+    "On the one hand, the dismantling should proceed rapidly, on the other hand, the \u00d6VAG must not incur too large losses with the sales."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>vorbeikommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to come by</dd>
+  <dd>to come in</dd>
+  <dd>to come over</dd>
+  <dd>to come round</dd>
+  <dd>to drop by</dd>
+  <dd>to show up</dd>
+  <dd>to stop by</dd>
+  <dd>to come</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Andererseits werden aber auch die Krisenländer nicht an der Erkenntnis vorbeikommen, dass das Zugpferd der europäischen Wirtschaft nicht unbegrenzt belastbar ist.
+  </p>
+  <p>
+    "On the other hand, however, even the crisis countries will not be able to avoid the realisation that the driving force of the European economy cannot be resilient indefinitely."
+  </p>
+  <p>
+    Angeblich wollten am selben Tag Mitarbeiter von Krankenkassen bei den Leuten persönlich für Beratungsgespräche vorbeikommen.
+  </p>
+  <p>
+    "Allegedly, on the same day, employees of health insurance companies wanted to visit people in person for consultations."
+  </p>
+  <p>
+    Wenn aber das Geld knapp wird, ist der Konsum eine Realität, an der auch arme Menschen nicht vorbeikommen.
+  </p>
+  <p>
+    "But when money is tight, consumption is a reality that even poor people can\u00e4t."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>vorkommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to occur</dd>
+  <dd>to happen</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>wieder vorkommen</dt>
+    <dd>to happen again</dd>
+    <dt>in der Vergangenheit vorkommen</dt>
+    <dd>to happen in the past</dd>
+  </dl>
+  </dd>
+  <dd>to feature</dd>
+  <dd>to figure</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Sollte natürlich sowas nochmal vorkommen, wird es wohl neben der Anzeige auch ein dauerhaftes Hausverbot geben.
+  </p>
+  <p>
+    "If, of course, something like this happens again, there will probably be a permanent ban in addition to the complaint."
+  </p>
+  <p>
+    Einige Abschnitte dürften den Leuten vertraut vorkommen, die den Titel bereits auf der gamescom antesten konnten.
+  </p>
+  <p>
+    "Some sections should look familiar to people who have already been able to check out the title at gamescom."
+  </p>
+  <p>
+    Und natürlich weiß auch ein Peter Pilz, wo er anrufen muss, wenn er vorkommen will.
+  </p>
+  <p>
+    "And of course, Peter Pilz also knows where to call if he wants to appear."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>wegkommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to get out</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Mit den beiden Verstärkungen wollen die Oberbayern in der 2. Bundesliga vom Tabellenende wegkommen.
+  </p>
+  <p>
+    "With the two reinforcements, the Upper Bavarians want to get away from the bottom of the table in the 2nd Bundesliga."
+  </p>
+  <p>
+    Die von der SPD und den Grünen geführten Bundesländern haben entscheidende Änderungen an dem Steuerabkommen verlangt, weil ihrer Ansicht nach deutsche Steuersünder mit Schwarzgeld in der Schweiz zu gut wegkommen.
+  </p>
+  <p>
+    "The federal states, led by the SPD and the Greens, have demanded decisive changes to the tax treaty because, in their opinion, German taxpayers can get away with black money in Switzerland."
+  </p>
+  <p>
+    Denn Zugeständnisse an die Kritiker auf deutscher Seite, denen die Steuerbetrüger in dem Abkommen viel zu gut wegkommen, kann Widmer-Schlumpf sich nicht leisten.
+  </p>
+  <p>
+    "Because Widmer-Schlumpf cannot afford to make concessions to the critics on the German side, for whom the tax evaders in the agreement come off far too well."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>weiterkommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to make progress</dd>
+  <dd>to get anywhere</dd>
+  <dd>to progress</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    «Wenn wir hundertprozentig konzentriert sind, werden wir eine Runde weiterkommen.
+  </p>
+  <p>
+    "\u00abIf we're 100 percent focused, we'll go through to the next round."
+  </p>
+  <p>
+    Klar ist, dass wir nicht weiterkommen, ohne konkrete Vorschläge zu unterbreiten.
+  </p>
+  <p>
+    "It is clear that we will not make any progress without making concrete proposals."
+  </p>
+  <p>
+    Für jene, die tatsächlich immer weiterkommen und in ihren Disziplinen die höchsten Sphären erreichen, mag sich das auszahlen.
+  </p>
+  <p>
+    "For those who actually get ahead and reach the highest levels in their disciplines, this may pay off."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>wiederkommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to come back</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>später wiederkommen</dt>
+    <dd>to come back later</dd>
+  </dl>
+  </dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Aber ich werde sonst nicht wiederkommen.
+  </p>
+  <p>
+    "But I won't be coming back otherwise."
+  </p>
+  <p>
+    Bis dahin soll Isabella aus Kenia sich nämlich halbiert haben und wiederkommen.
+  </p>
+  <p>
+    "By then, Isabella from Kenya should have halved herself and come back."
+  </p>
+  <p>
+    Sollte Berlusconi wiederkommen, wäre das keine gute Nachricht.
+  </p>
+  <p>
+    "If Berlusconi were to return, it would not be good news."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>zugutekommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to benefit</dd>
+  <dd>to come up</dd>
+  <dd>to play</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>zu~kommen hier</dt>
+    <dd>to play here</dd>
+  </dl>
+  </dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Das Geld soll Frauen und Kindern in Westafrika zugutekommen.
+  </p>
+  <p>
+    "The money will benefit women and children in West Africa."
+  </p>
+  <p>
+    Die Öffnungszeiten würden der urbanen Bevölkerung von Zürich zugutekommen, teilt die Migros mit.
+  </p>
+  <p>
+    "The \u00d6opening hours would benefit the urban population of Zurich, Migros announces."
+  </p>
+  <p>
+    Sämtliche Erlöse werden Kindern und Jugendlichen aus Feldkirch zugutekommen.
+  </p>
+  <p>
+    "All proceeds will benefit children and young people from Feldkirch."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>zukommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to play</dd>
+  <dd>to face</dd>
+  <dd>to bring</dd>
+  <dd>to give</dd>
+  <dd>to incur</dd>
+  <dd>to play in this regard</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Aber dass diese Frage auf mich zukommen könnte, war mir klar.
+  </p>
+  <p>
+    "But it was clear to me that this question might come to me."
+  </p>
+  <p>
+    Das Geld wird den fünf von der Ölkatastrophe betroffenen US-Bundesstaaten zukommen.
+  </p>
+  <p>
+    "The money will go to the five U.S. states affected by the disaster."
+  </p>
+  <p>
+    Die Belastungen, die durch Alzheimer und Demenz auf unsere immer älter werdende Gesellschaft zukommen, sind gigantisch.
+  </p>
+  <p>
+    "The burdens that Alzheimer's and dementia are placing on our increasingly elderly society are gigantic."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>zurechtkommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to contend</dd>
+  <dd>to cope</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Sie müssen also mit diesem Trio zurechtkommen.
+  </p>
+  <p>
+    "So you\u00fcssen have to deal with this trio."
+  </p>
+  <p>
+    Mit Enttäuschungen allerdings musste Hamilton in dieser Saison auch bei McLaren zurechtkommen.
+  </p>
+  <p>
+    "However, Hamilton also had to deal with disappointments at McLaren this season."
+  </p>
+  <p>
+    So müssen die Betroffenen immer wieder mit dem Unverständnis für ihre seltene Erkrankung und mit der Abneigung ihrer Mitmenschen zurechtkommen.
+  </p>
+  <p>
+    "So those affected have to cope again and again with the incomprehension for their rare disease and with the aversion of their fellow human beings."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>zurückkommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to come back</dd>
+  <dd>to come back</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>noch einmal zurückkommen</dt>
+    <dd>to come back</dd>
+  </dl>
+  </dd>
+  <dd>to get back</dd>
+  <dd>to go back</dd>
+  <dd>to pick up</dd>
+  <dd>to return</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>auf das Thema zurückkommen</dt>
+    <dd>to return to the issue</dd>
+  </dl>
+  </dd>
+  <dd>to revisit</dd>
+  <dd>to come home</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Ich wollte zurückkommen.
+  </p>
+  <p>
+    "I wanted to come back to\u00fcc."
+  </p>
+  <p>
+    Der Fußball wird zweifellos zurückkommen, aber das gesamte Land muss aus diesem dunklen Tunnel herausfinden.
+  </p>
+  <p>
+    "Football will undoubtedly come back, but the whole country needs to find its way out of this dark tunnel."
+  </p>
+  <p>
+    Dazu käme noch der Fall, wo das schweizerische Gericht der Mutter bereits verboten hat, ins Ausland zu ziehen, und noch dazu anordnet, sie müsse zurückkommen.
+  </p>
+  <p>
+    "In addition, there is the case where the Swiss court has already prohibited the mother from moving abroad and orders her to come back."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>zusammenkommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to attend</dd>
+  <dd>to bring together</dd>
+  <dd>to come together</dd>
+  <dd>to convene</dd>
+  <dd>to gather</dd>
+  <dd>to get together</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>bald zusammenkommen</dt>
+    <dd>to get together soon</dd>
+  </dl>
+  </dd>
+  <dd>to meet</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>erneut zusammenkommen</dt>
+    <dd>to meet again</dd>
+    <dt>regelmäßig zusammenkommen</dt>
+    <dd>to meet regularly</dd>
+    <dt>morgen zusammenkommen</dt>
+    <dd>to meet tomorrow</dd>
+  </dl>
+  </dd>
+  <dd>to brings together</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Am Mittwoch soll aber zunächst der Schura-Rat, das Oberhaus im Parlament, zu seiner ersten Sitzung zusammenkommen.
+  </p>
+  <p>
+    "On Wednesday, however, the Shura Council, the upper house of parliament, is to meet for its first meeting."
+  </p>
+  <p>
+    Die Außenminister der im Sicherheitsrat vertretenen Staaten wollen im Laufe des Tages am UN-Sitz in New York zu Beratungen über Syrien zusammenkommen.
+  </p>
+  <p>
+    "The foreign ministers of the states represented on the Security Council plan to meet later today at the UN headquarters in New York for consultations on Syria."
+  </p>
+  <p>
+    Der Koalitionsausschuss werde am späten Sonntagnachmittag zusammenkommen, hieß es aus Koalitionskreisen zu SPIEGEL ONLINE.
+  </p>
+  <p>
+    "The coalition committee will meet late Sunday afternoon, coalition sources told SPIEGEL ONLINE."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>zuvorkommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to anticipate</dd>
+  <dd>to forestall</dd>
+  <dd>to pre-empt</dd>
+  <dd>to preempt</dd>
+  <dd>to preclude</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Zudem kann die UBS den Untersuchungen durch die Schweizer und britischen Aufsichtsbehörden nicht zuvorkommen.
+  </p>
+  <p>
+    "In addition, UBS cannot pre-empt investigations by the Swiss and British supervisory authorities."
+  </p>
+  <p>
+    Damit will die EZB insbesondere einer Kreditklemme, die sie wegen der Schuldenkrise befürchtet, zuvorkommen.
+  </p>
+  <p>
+    "In this way, the ECB wants to pre-empt a credit crunch that it fears because of the debt crisis."
+  </p>
+  <p>
+    Ich nehme an, das Verfassungsgericht zwingt uns zum handeln", sagt Bosbach, "es ist nur noch die Frage, ob wir dem zuvorkommen.
+  </p>
+  <p>
+    "I suppose the Constitutional Court will force us to act," says Bosbach, "it's just a question of whether we can pre-empt it."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>kommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to come</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>kommen aus einem Land</dt>
+    <dd>to come from a country</dd>
+    <dt>zu dem Schluss kommen</dt>
+    <dd>to come to the conclusion</dd>
+    <dt>nach Hause kommen</dt>
+    <dd>to come home</dd>
+    <dt>zusammen kommen</dt>
+    <dd>to come together</dd>
+  </dl>
+  </dd>
+  <dd>to get</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>dorthin kommen</dt>
+    <dd>to get there</dd>
+    <dt>soweit kommen</dt>
+    <dd>to get here</dd>
+    <dt>eher dorthin kommen</dt>
+    <dd>to get there sooner</dd>
+    <dt>zu ihrem Recht kommen</dt>
+    <dd>to get justice</dd>
+  </dl>
+  </dd>
+  <dd>to reach</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>zu einer Einigung kommen</dt>
+    <dd>to reach agreement</dd>
+  </dl>
+  </dd>
+  <dd>to bring</dd>
+  <dd>to arrive</dd>
+  <dd>to go</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>weiter kommen</dt>
+    <dd>to go far</dd>
+  </dl>
+  </dd>
+  <dd>to come up</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>kommen auf Theorien</dt>
+    <dd>to come up with theories</dd>
+    <dt>hier rauf kommen</dt>
+    <dd>to come up here</dd>
+  </dl>
+  </dd>
+  <dd>to achieve</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>zu einem Ergebnis kommen</dt>
+    <dd>to achieve a result</dd>
+  </dl>
+  </dd>
+  <dd>to happen</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>zuerst kommen</dt>
+    <dd>to happen first</dd>
+  </dl>
+  </dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Hinzu kommen deutsche Tochtergesellschaften ausländischer Großbanken.
+  </p>
+  <p>
+    "In addition, there are German subsidiaries of major foreign banks."
+  </p>
+  <p>
+    Seine Erfolge kommen nicht von ungefähr, sie beruhen auf viel Training.
+  </p>
+  <p>
+    "His successes don\u00e4hr no coincidence, they are based on a lot of training."
+  </p>
+  <p>
+    «Je weiter südlich wir kommen, umso mehr Zuschauer stehen an der Strasse.
+  </p>
+  <p>
+    "\u00abThe further south we go, the more spectators are on the road."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>ankommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to arrive</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>dort ankommen</dt>
+    <dd>to arrive there</dd>
+    <dt>am Flughafen ankommen</dt>
+    <dd>to arrive at the airport</dd>
+    <dt>hier ankommen</dt>
+    <dd>to arrive here</dd>
+    <dt>zu hause ankommen</dt>
+    <dd>to arrive home</dd>
+  </dl>
+  </dd>
+  <dd>to come in</dd>
+  <dd>to get there</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>am Ziel ankommen</dt>
+    <dd>to get there</dd>
+  </dl>
+  </dd>
+  <dd>to get through</dd>
+  <dd>to matter</dd>
+  <dd>to come down</dd>
+  <dd>to depend</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Worauf wird es besonders ankommen, um Kiew auszuschalten?
+  </p>
+  <p>
+    "What will be particularly important to eliminate Kyiv?"
+  </p>
+  <p>
+    Eine solche Steuerbefreiung müsse aber auch bei den Endkunden ankommen.
+  </p>
+  <p>
+    "However, such a tax exemption would also have to reach end customers."
+  </p>
+  <p>
+    Es wird darauf ankommen, das Auto sehr schnell auf die dortigen Gegebenheiten anzupassen.
+  </p>
+  <p>
+    "It will be important to adapt the car very quickly to the conditions there."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>aufkommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to arise</dd>
+  <dd>to come up</dd>
+  <dd>to emerge</dd>
+  <dd>to pay</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>für die heutigen Rentner aufkommen</dt>
+    <dd>to pay for today's pensioners</dd>
+    <dt>für die Kosten aufkommen</dt>
+    <dd>to pay the costs</dd>
+  </dl>
+  </dd>
+  <dd>to surface</dd>
+ </dl>
+</section>
     </body>
 </html>
