--- a/output.html
+++ b/output.html
@@ -45,13 +45,19 @@
     Wer nicht ganz so viel ausgeben will, kann eine kleine SSD nur für das Betriebssystem nutzen und Musik, Filme und Programme weiter auf einer herkömmlichen Festplatte aufbewahren.
   </p>
   <p>
-    If you don\u00fcr don\u00fcr don\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u0
+    If you don't want to spend quite as much, you can use a small SSD only for the operating system and continue to store music, movies and programs on a conventional hard drive.
   </p>
   <p>
     Was muss alles in einem Protokoll der Eigentümerversammlungen stehen und wie lange muss die Hausverwaltung diese aufbewahren?
   </p>
   <p>
     What must be included in the minutes of the owners' meetings and how long does the property management company have to keep them?
+  </p>
+  <p>
+    Deshalb wird sich die Fed ihr letztes Pulver noch aufbewahren, vor allem weil wir uns mitten im Wahlkampf befinden und man dort schnell auf viel politischen Wiederstand treffen könnte.
+  </p>
+  <p>
+    That's why the Fed is going to keep its last powder, especially because we\u20199s in the middle of the election campaign and you could quickly encounter a lot of political resistance there.
   </p>
 </section><section class='definitions'>
   <dl class='hwd'>
@@ -91,13 +97,25 @@
     Wer nicht ganz so viel ausgeben will, kann eine kleine SSD nur für das Betriebssystem nutzen und Musik, Filme und Programme weiter auf einer herkömmlichen Festplatte aufbewahren.
   </p>
   <p>
-    If you don\u00fcr don\u00fcr don\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u00fcr\u0
+    If you don't want to spend quite as much, you can use a small SSD only for the operating system and continue to store music, movies and programs on a conventional hard drive.
   </p>
   <p>
     Was muss alles in einem Protokoll der Eigentümerversammlungen stehen und wie lange muss die Hausverwaltung diese aufbewahren?
   </p>
   <p>
     What must be included in the minutes of the owners' meetings and how long does the property management company have to keep them?
+  </p>
+  <p>
+    Deshalb wird sich die Fed ihr letztes Pulver noch aufbewahren, vor allem weil wir uns mitten im Wahlkampf befinden und man dort schnell auf viel politischen Wiederstand treffen könnte.
+  </p>
+  <p>
+    That's why the Fed is going to keep its last powder, especially because we\u20199s in the middle of the election campaign and you could quickly encounter a lot of political resistance there.
+  </p>
+  <p>
+    Wer nicht ganz so viel ausgeben will, kann eine kleine SSD nur für das Betriebssystem nutzen und Musik, Filme und Programme weiter auf einer herkömmlichen Festplatte aufbewahren.
+  </p>
+  <p>
+    If you don't want to spend quite as much, you can use a small SSD only for the operating system and continue to store music, movies and programs on a conventional hard drive.
   </p>
 </section><section class='definitions'>
   <dl class='hwd'>
