--- a/output.html
+++ b/output.html
@@ -59,6 +59,12 @@
   <p>
     That's why the Fed is going to keep its last powder, especially because we\u20199s in the middle of the election campaign and you could quickly encounter a lot of political resistance there.
   </p>
+  <p>
+    Wer nicht ganz so viel ausgeben will, kann eine kleine SSD nur für das Betriebssystem nutzen und Musik, Filme und Programme weiter auf einer herkömmlichen Festplatte aufbewahren.
+  </p>
+  <p>
+    If you don't want to spend quite as much, you can use a small SSD only for the operating system and continue to store music, movies and programs on a conventional hard drive.
+  </p>
 </section><section class='definitions'>
   <dl class='hwd'>
   <dt>
