--- a/output.html
+++ b/output.html
@@ -7,170 +7,5 @@
       <link rel="stylesheet" type="text/css" media="screen" href="css/vocab.css"> 
       <link rel="stylesheet" type="text/css" media="print" href="css/print-vocab.css"> 
    </head>
-<body><section class='definitions'>
-  <dl class='hwd'>
-  <dt>
-   <ul>
-    <li>aufbewahren</li>
-    <li class='pos'>VERB</li>
-   </ul>
-  </dt>
-  <dd>to keep</dd>
-  <dd>to store</dd>
-  <dd>to retain</dd>
-  <dd>to receive</dd>
-  <dd>to conserve</dd>
- </dl>
-</section>
-<section class='samples'>
-  <p>
-    Optional bietet Toshiba eine Dockingstation an, in der sich das Tablet aufbewahren und laden lässt.
-  </p>
-  <p>
-    Optionally, Toshiba offers a docking station where the tablet can be stored and charged.
-  </p>
-  <p>
-    Deshalb wird sich die Fed ihr letztes Pulver noch aufbewahren, vor allem weil wir uns mitten im Wahlkampf befinden und man dort schnell auf viel politischen Wiederstand treffen könnte.
-  </p>
-  <p>
-    That's why the Fed is going to keep its last powder, especially because we\u20199s in the middle of the election campaign and you could quickly encounter a lot of political resistance there.
-  </p>
-  <p>
-    "Wir gehen aber davon aus, dass die Kunden zu einem grossen Teil Gold aufbewahren", sagt Steck.
-  </p>
-  <p>
-    However, we assume that customers store a large proportion of gold," says Steck.
-  </p>
-  <p>
-    Wer nicht ganz so viel ausgeben will, kann eine kleine SSD nur für das Betriebssystem nutzen und Musik, Filme und Programme weiter auf einer herkömmlichen Festplatte aufbewahren.
-  </p>
-  <p>
-    If you don't want to spend quite as much, you can use a small SSD only for the operating system and continue to store music, movies and programs on a conventional hard drive.
-  </p>
-  <p>
-    Was muss alles in einem Protokoll der Eigentümerversammlungen stehen und wie lange muss die Hausverwaltung diese aufbewahren?
-  </p>
-  <p>
-    What must be included in the minutes of the owners' meetings and how long does the property management company have to keep them?
-  </p>
-  <p>
-    Deshalb wird sich die Fed ihr letztes Pulver noch aufbewahren, vor allem weil wir uns mitten im Wahlkampf befinden und man dort schnell auf viel politischen Wiederstand treffen könnte.
-  </p>
-  <p>
-    That's why the Fed is going to keep its last powder, especially because we\u20199s in the middle of the election campaign and you could quickly encounter a lot of political resistance there.
-  </p>
-  <p>
-    Wer nicht ganz so viel ausgeben will, kann eine kleine SSD nur für das Betriebssystem nutzen und Musik, Filme und Programme weiter auf einer herkömmlichen Festplatte aufbewahren.
-  </p>
-  <p>
-    If you don't want to spend quite as much, you can use a small SSD only for the operating system and continue to store music, movies and programs on a conventional hard drive.
-  </p>
-</section><section class='definitions'>
-  <dl class='hwd'>
-  <dt>
-   <ul>
-    <li>aufbewahren</li>
-    <li class='pos'>VERB</li>
-   </ul>
-  </dt>
-  <dd>to keep</dd>
-  <dd>to store</dd>
-  <dd>to retain</dd>
-  <dd>to receive</dd>
-  <dd>to conserve</dd>
- </dl>
-</section>
-<section class='samples'>
-  <p>
-    Optional bietet Toshiba eine Dockingstation an, in der sich das Tablet aufbewahren und laden lässt.
-  </p>
-  <p>
-    Optionally, Toshiba offers a docking station where the tablet can be stored and charged.
-  </p>
-  <p>
-    Deshalb wird sich die Fed ihr letztes Pulver noch aufbewahren, vor allem weil wir uns mitten im Wahlkampf befinden und man dort schnell auf viel politischen Wiederstand treffen könnte.
-  </p>
-  <p>
-    That's why the Fed is going to keep its last powder, especially because we\u20199s in the middle of the election campaign and you could quickly encounter a lot of political resistance there.
-  </p>
-  <p>
-    "Wir gehen aber davon aus, dass die Kunden zu einem grossen Teil Gold aufbewahren", sagt Steck.
-  </p>
-  <p>
-    However, we assume that customers store a large proportion of gold," says Steck.
-  </p>
-  <p>
-    Wer nicht ganz so viel ausgeben will, kann eine kleine SSD nur für das Betriebssystem nutzen und Musik, Filme und Programme weiter auf einer herkömmlichen Festplatte aufbewahren.
-  </p>
-  <p>
-    If you don't want to spend quite as much, you can use a small SSD only for the operating system and continue to store music, movies and programs on a conventional hard drive.
-  </p>
-  <p>
-    Was muss alles in einem Protokoll der Eigentümerversammlungen stehen und wie lange muss die Hausverwaltung diese aufbewahren?
-  </p>
-  <p>
-    What must be included in the minutes of the owners' meetings and how long does the property management company have to keep them?
-  </p>
-  <p>
-    Deshalb wird sich die Fed ihr letztes Pulver noch aufbewahren, vor allem weil wir uns mitten im Wahlkampf befinden und man dort schnell auf viel politischen Wiederstand treffen könnte.
-  </p>
-  <p>
-    That's why the Fed is going to keep its last powder, especially because we\u20199s in the middle of the election campaign and you could quickly encounter a lot of political resistance there.
-  </p>
-  <p>
-    Wer nicht ganz so viel ausgeben will, kann eine kleine SSD nur für das Betriebssystem nutzen und Musik, Filme und Programme weiter auf einer herkömmlichen Festplatte aufbewahren.
-  </p>
-  <p>
-    If you don't want to spend quite as much, you can use a small SSD only for the operating system and continue to store music, movies and programs on a conventional hard drive.
-  </p>
-</section><section class='definitions'>
-  <dl class='hwd'>
-  <dt>
-   <ul>
-    <li>bewahren</li>
-    <li class='pos'>VERB</li>
-   </ul>
-  </dt>
-  <dd>to preserve</dd>
-  <dd>to maintain</dd>
-  <dd>to keep</dd>
-  <dd>to retain</dd>
-  <dd>to protect</dd>
-  <dd>to save</dd>
-  <dd>to safeguard</dd>
-  <dd>to forbid</dd>
- </dl>
-</section>
-<section class='samples'>
-  <p>
-    Ihr späterer Angreifer, der Lebensgefährte, wollte die Frau vor der Festnahme bewahren und ließ die Beamten nicht herein.
-  </p>
-  <p>
-    Her later attacker, the life partner, wanted to save the woman from arrest and did not let the officers in.
-  </p>
-  <p>
-    Anschließend versuchte sie im Hexenkessel von London die Ruhe zu bewahren.
-  </p>
-  <p>
-    Then she tried to keep calm in the cauldron of London.
-  </p>
-  <p>
-    Sondern, um uns davor zu bewahren, noch einmal ein paar Wochen in der tollen Fantasywelt zu versenken.
-  </p>
-  <p>
-    But to save us from sinking into the great fantasy world for a few more weeks.
-  </p>
-  <p>
-    In einem solchen Fall heißt es, Ruhe bewahren und den Anspruch bestreiten.
-  </p>
-  <p>
-    In such a case, it is necessary to keep calm and dispute the claim.
-  </p>
-  <p>
-    Je mehr sich diese Fliehkräfte verstärken, desto schwieriger könnte es werden, die Euro-Zone vor einem Auseinanderbrechen zu bewahren.
-  </p>
-  <p>
-    The more these centrifugal forces intensify, the more difficult it could be to keep the eurozone from breaking up.
-  </p>
-</section>    </body>
+<body>    </body>
 </html>
