--- a/output.html
+++ b/output.html
@@ -7,5 +7,51 @@
       <link rel="stylesheet" type="text/css" media="screen" href="css/vocab.css"> 
       <link rel="stylesheet" type="text/css" media="print" href="css/print-vocab.css"> 
    </head>
-<body>    </body>
+<body><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>aufbewahren</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to keep</dd>
+  <dd>to store</dd>
+  <dd>to retain</dd>
+  <dd>to receive</dd>
+  <dd>to conserve</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Optional bietet Toshiba eine Dockingstation an, in der sich das Tablet aufbewahren und laden lässt.
+  </p>
+  <p>
+    Toshiba offers an optional docking station in which the tablet can be stored and charged.
+  </p>
+  <p>
+    Deshalb wird sich die Fed ihr letztes Pulver noch aufbewahren, vor allem weil wir uns mitten im Wahlkampf befinden und man dort schnell auf viel politischen Wiederstand treffen könnte.
+  </p>
+  <p>
+    That's why the Fed will keep its last powder, especially because we are in the middle of the election campaign and you could quickly meet a lot of political resistance there.
+  </p>
+  <p>
+    "Wir gehen aber davon aus, dass die Kunden zu einem grossen Teil Gold aufbewahren", sagt Steck.
+  </p>
+  <p>
+    But we assume that customers will keep gold to a large extent," says Steck.
+  </p>
+  <p>
+    Wer nicht ganz so viel ausgeben will, kann eine kleine SSD nur für das Betriebssystem nutzen und Musik, Filme und Programme weiter auf einer herkömmlichen Festplatte aufbewahren.
+  </p>
+  <p>
+    If you don't want to spend quite as much, you can use a small SSD only for the operating system and continue to store music, movies and programs on a conventional hard drive.
+  </p>
+  <p>
+    Was muss alles in einem Protokoll der Eigentümerversammlungen stehen und wie lange muss die Hausverwaltung diese aufbewahren?
+  </p>
+  <p>
+    What must be in the minutes of the owners' meetings and how long does the property management have to keep them?
+  </p>
+</section>    </body>
 </html>
