--- a/output.html
+++ b/output.html
@@ -53,5 +53,230 @@
   <p>
     What must be in the minutes of the owners' meetings and how long does the property management have to keep them?
   </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>erwähnen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to mention</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>im bericht erwähnt</dt>
+    <dd>mentioned in the report</dd>
+    <dt>von mehreren rednern erwähnt</dt>
+    <dd>mentioned by several speakers</dd>
+    <dt>bereits erwähnen</dt>
+    <dd>to mention previously</dd>
+    <dt>bereits erwähnt</dt>
+    <dd>mentioned above</dd>
+  </dl>
+  </dd>
+  <dd>to refer to</dd>
+  <dd>to point out</dd>
+  <dd>to note</dd>
+  <dd>to refer</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>erwähnen vorhin</dt>
+    <dd>to refer earlier</dd>
+  </dl>
+  </dd>
+  <dd>to raise</dd>
+  <dd>to state</dd>
+  <dd>to indicate</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Dass die Sozialisten Stalin und Mao Millionen verhungern liessen, erwähnen Sie in Ihrem Buch nur am Rand.
+  </p>
+  <p>
+    The fact that the socialists let Stalin and Mao starve millions to death is something you only mention in passing in your book.
+  </p>
+  <p>
+    Er hätte wohl die Reisen ins Baltikum nie erwähnen sollen, sagt er später.
+  </p>
+  <p>
+    He should probably never have mentioned the trips to the Baltic States, he says later.
+  </p>
+  <p>
+    So klopfte sich Obama selbst für angeblich fünf Millionen neu geschaffene Jobs auf die Schultern, ohne dabei zu erwähnen, dass diese zuvor in der Krise verloren gegangen waren.
+  </p>
+  <p>
+    Obama patted himself on the back for allegedly five million new jobs created, without mentioning that they had previously been lost in the crisis.
+  </p>
+  <p>
+    Man könnte im Fall der von den Piraten verlassenen Veranstaltung sogar lobend erwähnen, dass die Gastgeber keinen Hehl aus ihren finanziellen Beziehungen zu Microsoft machen.
+  </p>
+  <p>
+    In the case of the event abandoned by the Pirates, one could even praise the fact that the hosts make no secret of their financial relations with Microsoft.
+  </p>
+  <p>
+    Kurz nach dem Ende unseres Tests, aber noch rechtzeitig, um es zu erwähnen hat Publisher Paradox übrigens ein erstes, kostenloses Upgrade-Paket bekanntgegeben.
+  </p>
+  <p>
+    Shortly after the end of our test, but still in time to mention it, publisher Paradox announced a first, free upgrade package, by the way.
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>berühren</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to affect</dd>
+  <dd>to touch</dd>
+  <dd>to touch upon</dd>
+  <dd>to prejudice</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Die Teilnehmer sollten sich in einem sicheren Raum entspannen, indem sie sich gegenseitige streicheln und berühren.
+  </p>
+  <p>
+    Participants should relax in a safe space by stroking and touching each other.
+  </p>
+  <p>
+    Er wolle alle Sinne berühren, um die Sinnlichkeit und Erotik des Lebens zu zeigen, sagt er.
+  </p>
+  <p>
+    He wants to touch all the senses to show the sensuality and eroticism of life, he says.
+  </p>
+  <p>
+    Eine Aufgabe sieht Albert Drescher in der Werbung für den Nachwuchs, denn die Auswirkungen des demographischen Wandels berühren auch den Chor.
+  </p>
+  <p>
+    Albert Drescher sees a task in advertising for the next generation, because the effects of demographic change also affect the choir.
+  </p>
+  <p>
+    Wir wollen Kontakt aufnehmen mit Körper, Herz und Seele und lernen, uns ganzheitlich berühren zu lassen.
+  </p>
+  <p>
+    We want to make contact with body, heart and soul and learn to be touched holistically.
+  </p>
+  <p>
+    Er wurde behandelt wie eine heisse Kartoffel, die niemand berühren will.
+  </p>
+  <p>
+    He was treated like a hot potato that no one wants to touch.
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>beseitigen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to eliminate</dd>
+  <dd>to remove</dd>
+  <dd>to remedy</dd>
+  <dd>to abolish</dd>
+  <dd>to eradicate</dd>
+  <dd>to address</dd>
+  <dd>to do away with</dd>
+  <dd>to overcome</dd>
+  <dd>to dispose of</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>unter amtlicher aufsicht unschädlich beseitigt</dt>
+    <dd>disposed of under official supervision</dd>
+  </dl>
+  </dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Tut sie letzteres, verstärkt sie die Vorurteile anstatt sie zu beseitigen.
+  </p>
+  <p>
+    If it does the latter, it reinforces prejudices instead of eliminating them.
+  </p>
+  <p>
+    Bestehende Sorgen vor einer Kapitalerhöhung versuchten die neuen Chefs zu beseitigen.
+  </p>
+  <p>
+    The new bosses tried to eliminate existing concerns about a capital increase.
+  </p>
+  <p>
+    Audi will seine Schwachstelle beseitigen und in Amerika Gas geben.
+  </p>
+  <p>
+    Audi wants to eliminate its weak point and step on the gas in America.
+  </p>
+  <p>
+    Er ging in seinem Vortrag davon aus, dass die Frau ihr Töchterchen Samantha bewusst habe beseitigen wollen.
+  </p>
+  <p>
+    In his lecture, he assumed that the woman had deliberately wanted to get rid of her daughter Samantha.
+  </p>
+  <p>
+    VW-Chef Martin Winterkorn will mit einem umfassenden Konzernumbau Strukturprobleme beim Autobauer beseitigen und das Tempo auf dem Weg an die Weltspitze vorantreiben.
+  </p>
+  <p>
+    VW CEO Martin Winterkorn wants to eliminate structural problems at the carmaker with a comprehensive restructuring of the group and drive the pace on the way to the top of the world.
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>erwischen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to catch</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Die Wahrscheinlichkeit, eine Fälschung zu erwischen, ist hoch.
+  </p>
+  <p>
+    The probability of catching a counterfeit is high.
+  </p>
+  <p>
+    Wer sich dabei erwischen lässt, muss sich ab dem Sommer mit den Konsequenzen herumschlagen.
+  </p>
+  <p>
+    Anyone who gets caught doing so will have to deal with the consequences from the summer.
+  </p>
+  <p>
+    Oder so. Schon komisch und auch sehr dreist, aber solange man sich nicht erwischen lässt, passiert auch nix.
+  </p>
+  <p>
+    Or something. It's funny and also very brazen, but as long as you don't get caught, nothing happens.
+  </p>
+  <p>
+    Wir müssen Vertrauen aufbauen, die Architektur verändern und den Ball dort erwischen, wohin er rollt.
+  </p>
+  <p>
+    We have to build trust, change the architecture and catch the ball where it rolls.
+  </p>
+  <p>
+    Dadurch sind die Trucks auf den Geraden gleich schnell, man muss sich also einen Vorteil auf der Bremse verschaffen und auch den Kurvenausgang optimal erwischen, um der Konkurrenz die entscheidenden Zehntelsekunden abzunehmen.
+  </p>
+  <p>
+    As a result, the trucks are equally fast on the straights, so you have to gain an advantage on the brakes and also catch the exit of the corner optimally in order to take the decisive tenths of a second off the competition.
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>se hinsetzen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to sit down</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    <span>hinsetzen <span>has no sample sentsences.</span></span>
+  </p>
 </section>    </body>
 </html>
